web/routes-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-route
  namespace: default
spec:
  hosts:
  - apache.itsovertime.com
  gateways:
    - mesh
  http:
  - name: "v1-route"
    match:
    - uri:
        prefix: "/v2"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: web2.default.svc.cluster.local
        port:
          number: 80
      headers:
        response:
          add:
            set-cookie: "my-site-version=2; HttpOnly; Path=/"      
  - name: "v2-route"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: web.default.svc.cluster.local
        port:
          number: 80
      headers:
        response:
          add:
            set-cookie: "my-site-version=1; HttpOnly; Path=/"          
  - name: "v3-route"
    match:
    - uri:
        prefix: "/"
    - headers:
        response:
          add:
            set-cookie: "error=true"
        cookie:
          regex: ^(.\*?;)?(error=true)(;.\*)?$
    directResponse:
      status: 503
      body:
        string: "unknown error"
